--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-page-scroller": "^2.0.6-beta",
+    "react-responsive": "^8.0.3",
     "react-responsive-carousel": "^3.1.51",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
